# constructionerp

./: .eslintrc  .gitattributes  .gitignore  .pre-commit-config.yaml  ADR.md  AGENTS.md  CONSTRUCTION_ERP_AI_MEMORY_PLAN_v2.2.md  LICENSE  README.md  SENIOR_ENGINEER_AUDIT_REPORT.md  SESSION_MEMORY.md  babel_extractors.csv  install.py  pyproject.toml  requirements.txt  setup.py  verify_v16_selectors.js
.github/workflows/: ci.yml
construction/: .gitignore  DEBUG_REPORT.md  THEME_CONFIGURATION.md  UNINSTALL_FRAPPE_DESK_THEME.md  boot.py  cleanup_doctypes.py  cleanup_old_refs.py  fix_namespaces.py  gettext_extractors.py  hooks.py  insert_translations.py  install.py  list_doctypes.py  modules.txt  patches.txt  remove_important.py  run_cleanup.py
construction-erp-coder/: SKILL.md
construction-erp-coder/references/: coding-patterns.md  doctype-schema.md  project-context.md
construction/api/: __init__.py  boq_api.py  boq_link_queries.py  modern_form_api.py  scope_context_api.py  theme_api.py  translation_tools.py  uninstall_desk_theme.py  workspace_api.py
construction/config/: workspace_sidebar_items.json
construction/construction/: __init__.py  hooks.py
construction/doctype/: __init__.py
construction/fixtures/: boq_import_template.csv  workspace.json  (+1 more)
docs/: ADR-001-accounting-dimension.md  FEATURE_STATUS_REPORT_2026-05-31.md  arabic_db_translation_review.csv  arabic_localization_execution_plan.md  arabic_localization_production_signoff_report.md  arabic_localization_progress_tracker.md  arabic_po_review.csv  arabic_sidebar_translation_deployment_report.md  arabic_ui_i18n_guidelines.md  boq_integration_implementation.md  boq_integration_requirements.md  boq_integration_tasks_tests_verification.md  boq_scope_context_filtering_enhancement_directive.md  boq_scope_context_filtering_implementation_plan.md  boq_scope_context_phase_1_3_implementation_report.md  coverage_matrix.md  erpnext_ar_missing_review_filled.csv  form_layout_engine_team_letter.md  frappe_ar_missing_review.csv  global_arabic_catalog_stats.csv  global_arabic_localization_tracker.md  hook_matrix.md  migration_log.md  onboarding.md  performance_report.md  runbook.md  token_reference.md  translation_ui_analysis.md  troubleshooting.md
erpnext-mcp-server/: server.py
scripts/: ai_context_check.py  install_git_hooks.sh  mcp_recall.py  mcp_store.py  seed_memory.json  seed_memory.py  session_end.py
(+302 files in other folders)
