[project]
name = "construction"
authors = [
    { name = "mohamed", email = "mohamedelrefae@gmail.com"}
]
description = "construction"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    # "frappe~=15.0.0" # Installed and managed by bench.
]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

# These dependencies are only installed when developer mode is enabled
[tool.bench.dev-dependencies]
# package_name = "~=1.1.0"

# These apt dependencies will be installed from Ubuntu repositories when you host your app on Frappe Cloud
[deploy.dependencies.apt]
packages = []

[tool.ruff]
line-length = 110
target-version = "py310"

[tool.ruff.lint]
select = [
    "F",
    "E",
    "W",
    "I",
    "UP",
    "B",
    "RUF",
]
ignore = [
    "B007", # loop control variable not used within loop body
    "B017", # assertRaises(Exception) - should be more specific
    "B018", # useless expression, not assigned to anything
    "B023", # function doesn't bind loop variable - will have last iteration's value
    "B904", # raise inside except without from
    "E101", # indentation contains mixed spaces and tabs
    "E402", # module level import not at top of file
    "E501", # line too long
    "E722", # bare except
    "E741", # ambiguous variable name
    "F401", # "unused" imports
    "F403", # can't detect undefined names from * import
    "F405", # can't detect undefined names from * import
    "F722", # syntax error in forward type annotation
    "F841", # local variable assigned but never used
    "RUF002", # ambiguous unicode character in docstring
    "RUF003", # ambiguous unicode character in comment
    "RUF010", # use explicit conversion flag
    "RUF012", # mutable class attributes without ClassVar annotation
    "RUF013", # PEP 484 prohibits implicit Optional
    "UP006", # use builtin type instead of typing
    "UP007", # use X | Y for type annotations
    "UP015", # unnecessary open mode parameters
    "UP035", # deprecated typing imports
    "W191", # indentation contains tabs
]
typing-modules = ["frappe.types.DF"]

[tool.ruff.format]
quote-style = "double"
indent-style = "tab"
docstring-code-format = true

